add logut button

--- a/public/expiry-user.html
+++ b/public/expiry-user.html
@@ -56,6 +56,13 @@
                 </li>
             </ul>
         </div>
+        <div></div>
+            <ul class="navbar-nav mt-2 mt-lg-0 text-primary" >
+                <li class="nav-item active" >
+                    <a class="nav-link text-light" onclick="logout()" style="cursor: pointer;font-weight: bold;">logout</a>
+                </li>
+              </ul>
+        </div>
     </nav>
 
     <section>
