--- a/public/applicants.html
+++ b/public/applicants.html
@@ -51,9 +51,7 @@
         <div>
             <a class="navbar-brand text-light" href="#" style="font-weight: bold;">Admin</a>
         </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -78,6 +76,11 @@
                     <a class="nav-link text-light" onclick="logout()" style="cursor: pointer;font-weight: bold;">logout</a>
                 </li>
               </ul>
+        </div>
+        <div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
         </div>
       </nav>
       <section>
