--- a/public/applicants.html
+++ b/public/applicants.html
@@ -56,12 +56,21 @@
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
               <a class="nav-link text-light" style="font-weight: bold;" href="/applicants-page">Applicants</a>
-            <li class="nav-item active">
+            <!-- <li class="nav-item active">
                 <a class="nav-link text-light" href="/dashboard"  style="font-weight: bold;">Expiry users <span class="sr-only">(current)</span></a>
-            </li>
+            </li> -->
             <li class="nav-item active">
                 <a class="nav-link text-light" href="/payment.html"  style="font-weight: bold;">Payments <span class="sr-only">(current)</span></a>
-            </li>      
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link text-light" href="/expiry-user.html"  style="font-weight: bold;">today <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link text-light" href="/pending.html"  style="font-weight: bold;">pending <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link text-light" href="/alldues.html"  style="font-weight: bold;">complete <span class="sr-only">(current)</span></a>
+            </li>
           </ul>
          
           <!-- <form class="form-inline my-2 my-lg-0">
