--- a/public/alldues.html
+++ b/public/alldues.html
@@ -5,28 +5,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Due Installments</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
         }
         table, th, td {
-            border: 1px solid #ddd;
+            border: 1px solid black;
         }
         th, td {
-            padding: 10px;
+            padding: 8px;
             text-align: left;
         }
         th {
-            background-color: #f4f4f4;
+            background-color: #f2f2f2;
         }
+        .scrollable-table {
+            height: 400px;
+            overflow-y: auto;
+            display: block;
+        }
+        #noDataMessage {
+            display: none;
+            font-size: 18px;
+            color: red;
+        }
+        .toast {
+            position: fixed;
+            top: 0px; /* Position it at the top */
+            /* left: 50%; Center horizontally */
+            /* transform: translateX(-50%); Adjust for centering */
+            background-color: #f44336; /* Red */
+            color: white;
+            padding: 16px;
+            border-radius: 5px;
+            z-index: 1000;
+        }
+
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary d-flex">
+        <div>
+            <a class="navbar-brand text-light" href="#" style="font-weight: bold;">Admin</a>
+        </div>
+              
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link text-light" style="font-weight: bold;" href="/applicants-page">Applicants</a>
+            <!-- <li class="nav-item active">
+                <a class="nav-link text-light" href="/dashboard"  style="font-weight: bold;">Expiry users <span class="sr-only">(current)</span></a>
+            </li> -->
+            <li class="nav-item active">
+                <a class="nav-link text-light" href="/payment.html"  style="font-weight: bold;">Payments <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link text-light" href="/expiry-user.html"  style="font-weight: bold;">today <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link text-light" href="/pending.html"  style="font-weight: bold;">pending <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link text-light" href="/alldues.html"  style="font-weight: bold;">complete <span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+         
+          <!-- <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form> -->
+        </div>
+        <div>
+            <ul class="navbar-nav mt-2 mt-lg-0 text-primary" >
+                <li class="nav-item active" >
+                    <a class="nav-link text-light" onclick="logout()" style="cursor: pointer;font-weight: bold;">logout</a>
+                </li>
+              </ul>
+        </div>
+        <div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+        </div>
+      </nav>
+      <section>
+        <br>
     <h1>All Due Installments</h1>
 
     <!-- Table to display all the rows from 'pending' table -->
@@ -58,6 +125,7 @@
             <!-- Data will be populated here by JavaScript -->
         </tbody>
     </table>
+    </section>
 
     <script>
         // Function to fetch data from the 'pending' table and display in the table
