--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+z<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <section class="ctn">
+
+  <section class="ctn" id="step33">
     <div>
       <div class="row">
         <div class="col-lg-12 col-md-12">
@@ -845,11 +846,29 @@
                 <div class="button-box">
                   <button type="button" class="prev-button btn btn-primary" style="background-color: red;"
                     onclick="showPage(5)"> Previous</button>
-                  <button type="submit" class="next-button btn btn-primary"
-                    style="background-color: green;">Submit</button>
+
+                    <button type="button" class="next-button btn btn-primary" style="background-color: blue;" onclick="showPreview()">Preview</button>
+
+                  <!-- <button type="submit" class="next-button btn btn-primary"
+                    style="background-color: green;">Submit</button> -->
                 </div>
           </form>
         </div>
+
+<!-- Preview Modal -->
+<div id="previewModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5);">
+  <div style="background: white; margin: 50px auto; padding: 20px; width: 80%; max-width: 600px; border-radius: 8px;">
+    <h3>Form Preview</h3>
+    <div id="previewContent" style="max-height: 300px; overflow-y: auto;">
+      <!-- Preview content will be dynamically generated -->
+    </div>
+    <div style="margin-top: 20px;">
+      <button style="background-color: red; color: white; padding: 10px;" onclick="closePreview()">Cancel</button>
+      <button style="background-color: green; color: white; padding: 10px;" onclick="submitForm()">Submit</button>
+    </div>
+  </div>
+</div>
+
       </div>
     </div>
   </section>
